feat(engine): 添加钉钉凭证支持并优化代码结构
- 新增钉钉凭证类型和相关配置
- 实现钉钉凭证管理器接口和默认实现
- 在凭证管理API中添加钉钉相关的选项和保存逻辑
- 添加应用配置文件中的加密设置
- 删除演示模式相关代码以简化流程执行
- 优化CSV、Excel、FTP、Kafka等节点的行为实现
- 更新数据库实体和仓库接口
- 修改作业调度和队列加载相关实现
- 清理导入语句和代码格式化
- 修复多个节点行为中的空格和格式问题
- 添加规则流删除功能
- 更新前端资源引用路径